2009-08-02    <piumarta@solaris>

	* plugins/SocketPlugin/sqUnixSocket.c (union sockaddr_any): Rename
	sun to saun to avoid conflict with preprocessor symbol on Solaris.
	Rename AF_LOCAL to AF_UNIX for portability.

2009-07-30    <piumarta@ubuntu.piumarta.com>

	* config/acinclude.m4 (ac_optflags): Use a more
	optimisation-resistant strategy to detect validity of access to
	unaligned doubles.

2009-07-29    <piumarta@ubuntu.piumarta.com>

	* config/configure.ac: Version is 3.10-6.

	* src/vm/interp.c: Regenerate from VMM-126.

	* vm-display-X11/sqUnixX11.c (x2sqModifier): Differentiate between
	shift pressed and caps lock engaged.

2009-05-26  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.10-5

	* plugins/SecurityPlugin/sqUnixSecurity.c: Add support for
	read-only resource directory.  Add writeFlag to functions
	associated with resource directories.

	* plugins/HostWindowPlugin/sqUnixHostWindowPlugin.c: Added.

	* vm-display-Quartz/sqUnixQuartz.m,
	vm-display-fbdev/sqUnixFBDev.c,
	vm-display-custom/sqUnixCustomWindow.c,
	vm-display-null/sqUnixDisplayNull.c: Add host window stubs.

	* vm-display-X11/sqUnixX11.c: Add windowIndex arg to recWinEvt().
	Add host window stubs.  Warn (don't fail) if unconfigured options
	-xshm/-xasync are used.

	* vm/sqUnixEvent.c: Add windowIndex arg to recWinEvt() and evt
	struct.

	* vm/SqDisplay.h: Conditionally include sqUxOGL.h.  Add host
	window members.  Bump minor version number.

2009-02-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/sqUnixX11.c (display_ioSetCursorARGB): Convert
	cursorBitsIndex from oop to pointer using pointerForOop.

2009-02-03  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-fbdev/sqUnixFBDevMousePS2.c (ms_ps2_disable): Check
	success of write()s to mouse.

2008-11-24  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-fbdev/sqUnixFBDevMousePS2.c (ms_ps2_send,